--- a/Fullstack_Live/Week_0/HTML/HTML_Basics/HTML_Tags/cookies-exercise.html
+++ b/Fullstack_Live/Week_0/HTML/HTML_Basics/HTML_Tags/cookies-exercise.html
@@ -30,6 +30,6 @@
     </ol>
     <hr>
     <p>Oh you don't trust us? You want to see the actual recipe? 
-        You can view it <a href="#">here</a></p>
+        You can view it <a href="https://tasty.co/recipe/the-best-chewy-chocolate-chip-cookies">here</a></p>
 </body>
 </html>
