--- a/Fullstack_Live/Week_4/Day_1/ExercisesXP/index.html
+++ b/Fullstack_Live/Week_4/Day_1/ExercisesXP/index.html
@@ -10,4 +10,7 @@
 </body>
 <script src="exercise1.js"></script>
 <script src="exercise2.js"></script>
+<!-- <script src="exercise3.js"></script> -->
+<script src="exercise4.js"></script>
+<script src="exercise5.js"></script>
 </html>
