--- a/Fullstack_Live/Week_4/Day_1/ExercisesXP/index.html
+++ b/Fullstack_Live/Week_4/Day_1/ExercisesXP/index.html
@@ -13,4 +13,6 @@
 <!-- <script src="exercise3.js"></script> -->
 <script src="exercise4.js"></script>
 <script src="exercise5.js"></script>
+<script src="exercise6.js"></script>
+<script src="exercise7.js"></script>
 </html>
