--- a/Fullstack_Live/Week_4/Day_2/DailyChallenge#1/index.html
+++ b/Fullstack_Live/Week_4/Day_2/DailyChallenge#1/index.html
@@ -25,6 +25,9 @@
                 background: rgb(237, 237, 237);
                 border: 5px solid red;
             }
+            .Uranus:hover{
+
+            }
         </style>
     </head>
     <body>
@@ -32,5 +35,6 @@
     <section class="listPlanets"></section>
 
     <script src="index.js"></script>
+    <audio id="Notafart" src="Notafart.mp3"></audio>
     </body>
 </html>
