--- a/Fullstack_Live/Week_4/Day_3/DailyChallenge#2/index.html
+++ b/Fullstack_Live/Week_4/Day_3/DailyChallenge#2/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <label for="Powerofletters">Enter letters only:</label>
+    <input type="text" id="Powerofletters">
+    <p id="errorMessage" style="color: red;"></p>
     <script src="index.js"></script>
 </body>
 </html>
