--- a/Fullstack_Live/Week_4/Day_4/DailyChallenge/index.html
+++ b/Fullstack_Live/Week_4/Day_4/DailyChallenge/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <form>
+        <label for=""></label>
+        <input type="text" name="" id="">
+        <button type="submit"></button>
+    </form>
+    <div class="listTasks"></div>
     <script src="index.js"></script>
 </body>
 </html>
