--- a/Fullstack_Live/Week_4/Day_4/DailyChallenge/index.html
+++ b/Fullstack_Live/Week_4/Day_4/DailyChallenge/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <form>
-        <label for=""></label>
-        <input type="text" name="" id="">
-        <button type="submit"></button>
+        <label for="todo"></label>
+        <input type="text" name="todo" id="todo">
+        <p id="warning"></p>
+        <button type="submit">Add to the list</button>
     </form>
     <div class="listTasks"></div>
     <script src="index.js"></script>
