--- a/Fullstack_Live/Week_4/Day_4/MiniProject#2/index.html
+++ b/Fullstack_Live/Week_4/Day_4/MiniProject#2/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Drum Kit Soundboard</h1>
+    <div class="drum-kit">
+        <button id="playBoom">Boom - Press a</button>
+        <button id="playClap">Clap - Press s</button>
+        <button id="playHihat">HiHat - Press d</button>
+        <button id="playKick">Kick - Press f</button>
+        <button id="playOpenhat">OpenHat - Press g</button>
+        <button id="playRide">Ride - Press h</button>
+        <button id="playSnare">Snare - Press j</button>
+        <button id="playTink">Tink - Press k</button>
+        <button id="playTom">Tom - Press l</button>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
