--- a/Fullstack_Live/Week_5/Day_4/ExerciseXP/exercise3.html
+++ b/Fullstack_Live/Week_5/Day_4/ExerciseXP/exercise3.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="exercise3.js"></script>
+    <script>
+        const marioGame = {
+          detail: "An amazing game!",
+          characters: {
+            mario: {
+              description: "Small and jumpy. Likes princesses.",
+              height: 10,
+              weight: 3,
+              speed: 12,
+            },
+            bowser: {
+              description: "Big and green, Hates princesses.",
+              height: 16,
+              weight: 6,
+              speed: 4,
+            },
+            princessPeach: {
+              description: "Beautiful princess.",
+              height: 12,
+              weight: 2,
+              speed: 2,
+            }
+          },
+        };
+    
+        let jsonObject = JSON.stringify(marioGame, null, 2);
+        console.log(jsonObject);
+      </script>
 </body>
 </html>
