--- a/Fullstack_Live/Week_5/Day_4/MiniProject/index.html
+++ b/Fullstack_Live/Week_5/Day_4/MiniProject/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <section>
-        <button>
+<body id="container">
+    <section id="quoteSection">
+        <button id="generateQuote">
             Generate Quote
         </button>
+        <div id="quotePrint"></div>
     </section>
     <script src="index.js"></script>
 </body>
