--- a/Fullstack_Live/Week_5/Day_4/MiniProject/index.html
+++ b/Fullstack_Live/Week_5/Day_4/MiniProject/index.html
@@ -7,12 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="container">
-    <section id="quoteSection">
-        <button id="generateQuote">
-            Generate Quote
-        </button>
+    <div id="Generator">    
+        <h1>Quote Generator</h1>
+        <section id="quoteSection">
+            <button id="generateQuote">
+                <strong>Generate Quote</strong>
+            </button>
+            <button id="formGenerator">
+                <strong>Add a Quote</strong>
+            </button>
+            <button id="searchGenerator">
+                <strong>Find a Quote</strong>
+            </button>
+        </section>
         <div id="quotePrint"></div>
-    </section>
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
