--- a/Fullstack_Live/Week_5/Day_4/MiniProject/index.html
+++ b/Fullstack_Live/Week_5/Day_4/MiniProject/index.html
@@ -21,6 +21,10 @@
             </button>
         </section>
         <div id="quotePrint"></div>
+
+        <section id="formSection">
+
+        </section>
     </div>
 
     <script src="index.js"></script>
