--- a/Fullstack_Live/Week_5/Day_5/MiniProject#1/index.html
+++ b/Fullstack_Live/Week_5/Day_5/MiniProject#1/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/sega-logo-font" rel="stylesheet">
 </head>
 <body>
+    <nav id="navbar">
+        <h1>robotfriends</h1>
+        <input type="text" id="searchBar" name="searchBar" placeholder="Search your Robot friend here">
+        <audio preload autoplay loop src="assets/RobotFriend.mp3" id="music"></audio>
+    </nav>
+    <section id="robotfriends">
+        <div id="robotCard">
+            <img src="" alt="" id="robotImg">
+            <h1 id="robotName"></h1>
+            <p id="robotMail"></p>
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
