--- a/Fullstack_Live/Week_5/Day_5/MiniProject#2/index.html
+++ b/Fullstack_Live/Week_5/Day_5/MiniProject#2/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="container">
+        <table id="tiktaktoeContainer">
+            <tr id="tiktaktoeRow1">
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr id="tiktaktoeRow2">
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr id="tiktaktoeRow3">
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
