--- a/Fullstack_Live/Week_5/Day_5/MiniProject#2/index.html
+++ b/Fullstack_Live/Week_5/Day_5/MiniProject#2/index.html
@@ -6,25 +6,32 @@
     <title>Document</title>
 </head>
 <body>
+
     <div id="container">
+        <h1>ULTIMATE TIK TAK TOE</h1>
         <table id="tiktaktoeContainer">
+
             <tr id="tiktaktoeRow1">
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="tttRow1Column0"></td>
+                <td id="tttRow1Column1"></td>
+                <td id="tttRow1Column2"></td>
             </tr>
+
             <tr id="tiktaktoeRow2">
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="tttRow2Column0"></td>
+                <td id="tttRow2Column1"></td>
+                <td id="tttRow2Column2"></td>
             </tr>
+
             <tr id="tiktaktoeRow3">
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="tttRow3Column0"></td>
+                <td id="tttRow3Column1"></td>
+                <td id="tttRow3Column2"></td>
             </tr>
+
         </table>
     </div>
+    
     <script src="index.js"></script>
 </body>
 </html>
