--- a/Fullstack_Live/Week_5/Day_5/MiniProject#2/index.html
+++ b/Fullstack_Live/Week_5/Day_5/MiniProject#2/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div id="container">
         <h1>ULTIMATE TIK TAK TOE</h1>
+
+        <div id="chooseXO">
+            <h3>Do you wanna be</h3>
+            <button id="X">X</button>
+            <button id="O">O</button>
+        </div>
+
         <table id="tiktaktoeContainer">
 
             <tr id="tiktaktoeRow1">
