--- a/Fullstack_Live/Week_5/Day_5/MiniProject#2/index.html
+++ b/Fullstack_Live/Week_5/Day_5/MiniProject#2/index.html
@@ -11,6 +11,12 @@
     <div id="container">
         <h1>ULTIMATE TIK TAK TOE</h1>
 
+        <div id="chooseLevel">
+            <h3>Choose Difficulty Level:</h3>
+            <button id="easyLevel">Easy</button>
+            <button id="hardLevel">Hard</button>
+        </div>
+
         <div id="chooseXO">
             <h3>Do you wanna be</h3>
             <button id="X">X</button>
