--- a/Fullstack_Live/Week_6/Day_3/DailyChallenge/index.html
+++ b/Fullstack_Live/Week_6/Day_3/DailyChallenge/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>SHOW ME THE MONEY!</h1>
@@ -26,9 +27,13 @@
         <label for="conversion-result">Conversion</label>
         <input type="text" id="conversion-result" readonly placeholder="Converted amount">
 
-        <button type="button" id="switch-values">Switch</button>
-        <button type="button" id="convert-button">Convert</button>
+        <div id="buttons">
+            <button type="button" id="switch-values">Switch</button>
+            <button type="button" id="convert-button">Convert</button>
+        </div>
     </form>
+
+
 
     <script src="index.js"></script>
 </body>
