--- a/Fullstack_Live/Week_6/Day_3/MiniProject#2/index.html
+++ b/Fullstack_Live/Week_6/Day_3/MiniProject#2/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="logo">
+        <img src="assets/logo.png" alt="">
+    </div>
+
+    <section id="pokedex">
+        <div id="pokedex-sprite">
+            <img id="sprite" src="" alt="">
+        </div>
+
+        <div class="pokedex-data">
+
+            <h1 id="name"></h1>
+            <p id="number"></p>
+            <p id="height"></p>
+            <p id="weight"></p>
+            <p id="type"></p>
+            
+        </div>
+        <button type="button" id="button" name="button"></button>
+    </section>
+
+
+    
+
+    <div id="Instructions">
+
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
