--- a/Fullstack_Live/Week_6/Day_3/MiniProject#2/index.html
+++ b/Fullstack_Live/Week_6/Day_3/MiniProject#2/index.html
@@ -26,6 +26,10 @@
             
         </div>
         <button type="button" id="button" name="button"></button>
+        <div id="left-right">
+            <button type="button" id="left" name="button"></button>
+            <button type="button" id="right" name="button"></button>
+        </div>
     </section>
 
 
