--- a/Fullstack_Live/Week_6/Day_5/DailyChallenge - Not Done/public/index.html
+++ b/Fullstack_Live/Week_6/Day_5/DailyChallenge - Not Done/public/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Emoji Guessing Game</h1>
+    <div id="quiz"></div>
+    <div id="leaderboard"></div>
+    
     <script src="app.js"></script>
 </body>
 </html>
