--- a/Fullstack_Live/Week_7/Day_1/express-server/public/index.html
+++ b/Fullstack_Live/Week_7/Day_1/express-server/public/index.html
@@ -7,7 +7,19 @@
     <script src="script.js" defer async></script>
   </head>
   <body>
-    <h2>Users</h2>
+    <h2>Shop</h2>
+    <form onSubmit="handleSubmit(event)">
+      <input placeholder="name" name="product_name" />
+      <input placeholder="price" name="product_price" />
+      <input type="submit" value="Add Product" />
+    </form>
+    <h2>Update Product</h2>
+    <form onSubmit="handleUpdate(event)">
+      <input placeholder="id" name="product_id" />
+      <input placeholder="name" name="product_name" />
+      <input placeholder="price" name="product_price" />
+      <input type="submit" value="update Product" />
+    </form>
     <div id="root"></div>
   </body>
 </html>
