--- a/Fullstack_Live/Week_7/Day_1/ExerciseXP/Exercise_1/public/index.html
+++ b/Fullstack_Live/Week_7/Day_1/ExerciseXP/Exercise_1/public/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Welcome to My About Me API</h1>
+        <p>Explore details about me, my professional summary, technologies I work with, and more!</p>
+    </header>
+
+    <main>
+        <section>
+            <h2>API Endpoints</h2>
+            <p>Click the links below to explore the API:</p>
+            <div class="api-links">
+                <a href="/about/all" target="_blank">📄 About Me</a>
+            </div>
+        </section>
+
+        <section>
+            <h2>About the Project</h2>
+            <p>
+                This is a simple Express.js API project serving data about me, my skills, and professional background.
+                It is designed to be a quick and clean API showcasing my profile and expertise.
+            </p>
+        </section>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
