--- a/Fullstack_Live/Week_10/Day_3/Lesson/typescript-day2/index.html
+++ b/Fullstack_Live/Week_10/Day_3/Lesson/typescript-day2/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- <img /> -->
     <p>Copyright &copy; <span id="year"></span></p>
     <script type="module" src="/src/main.ts"></script>
   </body>
