--- a/Fullstack_Live/Week_10/Day_5/Exercises/MiniProject1/index.html
+++ b/Fullstack_Live/Week_10/Day_5/Exercises/MiniProject1/index.html
@@ -29,6 +29,6 @@
       <button id="clearRecipesButton">Clear All Recipes</button>
     </div>
   </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="../src/main.ts"></script>
   </body>
 </html>
